# lisp-llvm

./: .gitignore  CMakeLists.txt  main.c  vcpkg.json
src/ast/: CMakeLists.txt  ast.c  ast.h  tokens.c  tokens.h
src/cli/: CMakeLists.txt  Debug  actions.h  build.c  init.c  main.c  run.c  vcpkg.json
src/parser/: CMakeLists.txt  parser.h  tokenizer.c  tokenizer.h
tests/parser_tests/: CMakeLists.txt  test_main.cpp  vcpkg.json
